--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,11 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "Node",
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "rootDir": ".",
     "strict": true,
     "allowJs": true,
     "jsx": "react-jsx",
-    "paths": {
-      "@app/*": ["./src/*"]
-    }
   },
   "include": [
     "./src/**/*.tsx",
